bad/incr_new_class.example_compiler_output
ERROR
[1mbad/incr_new_class.lat:6:9: [1;31merror: [0;1mexpression is not assignable[m
	(new Y)++;
	       [1;32m^[m
[1mbad/incr_new_class.lat:6:2: [1;34mnote: [0;1mexpression starts here[m
	(new Y)++;
	[1;32m^[m
